<resources>
    <string name="app_name">营配贯通</string>
    <string name="app_add">添加</string>
    <string name="app_scan">扫描</string>
    <string name="app_import">导入</string>
    <string name="app_export">导出</string>
    <string name="app_tip">提示</string>
    <string name="app_alert_exit_application">是否退出应用程序?</string>
    <string name="app_no">否</string>
    <string name="app_yes">是</string>
    <string name="app_hint">请输入台区名或线路名</string>
    <string name="app_search">搜索</string>
    <string name="app_getpositionfaild">当前位置获取失败!</string>
    <string name="app_distance">接入点位置与当前位置距离大于2米\n是否使用?</string>
    <string name="app_regsiter">1</string>
    <string name="action_new_task">新建</string>
    <string name="collector">采集员：</string>
    <string name="collector_without_maohao">采集员</string>
    <string name="collectTime">采集时间：</string>
    <string name="collectTime_without_maohao">采集时间</string>
    <string name="template">任务模板：</string>
    <string name="template_without_maohao">任务模板</string>
    <string name="description">任务描述：</string>
    <string name="description_without_maohao">任务描述</string>
    <string name="openTask">打开</string>
    <string name="deleteTask">删除</string>
    <string name="taskManage">任务管理</string>
    <string name="taskName">任务名称：</string>
    <string name="task_manage">任务管理</string>
    <string name="system_setting">系统设置</string>
    <string name="import_data">导入数据</string>
    <string name="export_data">导出数据</string>
    <string name="action_ok">确定</string>
    <string name="collect_type">采集类型</string>
    <string name="dlg_tip">提示</string>
    <string name="dlg_warning">警告</string>
    <string name="confirm_delete_task">确定删除该任务？</string>
    <string name="dlg_yes">是</string>
    <string name="dlg_no">否</string>
    <string name="msg_task_name_already_exists">任务名已存在！</string>
    <string name="task_name_is_null">任务名不能为空！</string>
    <string name="dnb_dbtmbh">电表条码编号</string>
    <string name="dnb_jlxtmbh">计量箱条码编号</string>
    <string name="dnb_azdz">安装地址</string>
    <string name="dnb_ssyh">所属用户</string>
    <string name="init_template_spinner_failure">初始化模板失败！</string>
    <string name="dnb_dbbwh">电表表位（行）</string>
    <string name="not_found">未找到</string>
    <string name="dnb_dbbwl">电表表位（列）</string>
    <string name="create_task_failed_tip">创建任务失败！</string>
    <string name="lowPowerUser">低压用户</string>
    <string name="common_resource">公共资源</string>
    <string name="jlx_jlxz">计量箱组</string>
    <string name="jlx_jlxtmbh">计量箱条码编号</string>
    <string name="jlx_sblx">设备类型</string>
    <string name="jlx_bxlx">表箱类型</string>
    <string name="jlx_azdi">安装地址</string>
    <string name="jlx_h">行</string>
    <string name="jlx_l">列</string>
    <string name="jlx_cz">材质</string>
    <string name="jlx_gldw">管理单位</string>
    <string name="jlx_sjdw">上级单位</string>
    <string name="jlx_cxlb">城乡类别</string>
    <string name="jlx_gjsb">挂接设备</string>
    <string name="jlx_ywxtid">业务系统ID</string>
    <string name="jlx_zcdw">资产单位</string>
    <string name="jlx_zcdw2">资产单位(如不填则与管理单位相同)</string>
    <string name="jlx_zcxz">资产性质</string>
    <string name="jlx_dydj">电压等级</string>
    <string name="jlx_mc">名称</string>
    <string name="jlx_xh">型号</string>
    <string name="jlx_cnw">城农网</string>
    <string name="jlx_gjsblx">挂接设备类型</string>
    <string name="jlx_gjsbmc">挂接设备名称</string>
    <string name="jlx_jrdbs">接入点标识</string>
    <string name="jlx_tqbs">台区标识</string>
    <string name="jlx_sqbm">申请编码</string>
    <string name="jlx_whbz">维护班组</string>
    <string name="jlx_tpsblx">拓扑设备类型</string>
    <string name="jlx_exsit">该计量箱（柜）已存在!</string>
    <string name="jlxz_exsit">该计量箱（柜）组已存在!</string>
    <string name="jlxz_zm">组名</string>
    <string name="latitude">纬度（Y坐标）</string>
    <string name="longtitude">经度（X坐标）</string>
    <string name="altitude">高程</string>
    <string name="coord_update">坐标更新</string>
    <string name="altitude_update">高程更新</string>
    <string name="locknumber">卫星数:</string>
    <string name="zdsb_ywxtid">业务系统ID</string>
    <string name="zdsb_zcbh">资产编号</string>
    <string name="zdsb_xh">型号</string>
    <string name="zdsb_dz">地址</string>
    <string name="zdsb_zzdw">制造单位</string>
    <string name="zdsb_zdlx">终端类型</string>
    <string name="zdsb_cxlb">城乡类别</string>
    <string name="zdsb_dydj">电压等级</string>
    <string name="zdsb_sjdw">上级单位</string>
    <string name="zdsb_gldw">管理单位</string>
    <string name="zdsb_syxz">使用性质</string>
    <string name="zdsb_zddzbm">终端地址编码</string>
    <string name="zdsb_mc">名称</string>
    <string name="zdsb_cjfs">采集方式</string>
    <string name="zdsb_whbz">维护班组</string>
    <string name="zdsb_cnw">城农网</string>
    <string name="register_id">设备ID</string>
    <string name="register_code">注册码</string>
    <string name="register_tip">提示</string>
    <string name="register_reg">注册</string>
    <string name="register_version">版本</string>
    <string name="calculate_box_list">计量箱（柜）列表</string>
    <string name="dykhda_xh">序号</string>
    <string name="unable_open_target_activity_tip">界面跳转异常！</string>
    <string name="dykhda_gldw">管理单位</string>
    <string name="current_task_is_not_exist">当前没有打开的任务！</string>
    <string name="dykhda_khbh">客户编号</string>
    <string name="open_target_task_failed">打开任务失败！</string>
    <string name="target_task_file_not_found">任务文件异常！</string>
    <string name="target_task_is_running">任务已经打开！</string>
    <string name="current_task_not_null_tip">已有打开的任务，是否继续？</string>
    <string name="delete_task_succeed">删除任务成功！</string>
    <string name="delete_task_failed">删除任务失败！</string>
    <string name="delete_no_current_task_tip">确定删除该任务？</string>
    <string name="delete_current_task_tip">确定放弃当前任务并删除？</string>
    <string name="open_task_succeed">打开任务成功！</string>
    <string name="create_task_succeed">创建任务成功！</string>
    <string name="dykhda_khmc">客户名称</string>
    <string name="dykhda_yddz">用电地址</string>
    <string name="dykhda_lxrlx">联系人类型</string>
    <string name="dykhda_lxr">联系人</string>
    <string name="dykhda_lxdh">联系电话</string>
    <string name="dykhda_lxsj">联系手机</string>
    <string name="dykhda_zjlb">证件类别</string>
    <string name="dykhda_zjbh">证件编号</string>
    <string name="dykhda_tqbh">台区编号</string>
    <string name="dykhda_tqmc">台区名称</string>
    <string name="dykhda_byqmc">变压器名称</string>
    <string name="dykhda_jlxyxbh">计量箱运行编号</string>
    <string name="dykhda_jlxtxm">计量箱条形码</string>
    <string name="dykhda_dnbtxm">电能表条形码</string>
    <string name="necessary_attributes">必填</string>
    <string name="basic_attributes">基本</string>
    <string name="take_photos">拍照</string>
    <string name="coordinate">坐标</string>
    <string name="electric_energy_meter">电能表</string>
    <string name="electric_energy_runingtower">运行杆</string>
    <string name="calculate_box">计量箱（柜）</string>
    <string name="toast_file_not_found">文件未找到</string>
    <string name="remove_record">删除记录</string>
    <string name="photo_retake">重拍</string>
    <string name="photo_delete">刪除</string>
    <string name="confirm_delete_record">确定删除本条记录？</string>
    <string name="remove_failed">删除记录失败</string>
    <string name="photo_delete_tip">确定删除该照片？</string>
    <string name="open_system_take_photo_exception">系统相机加载异常！</string>
    <string name="open_system_preview_photo_exception">图片预览加载异常！</string>
    <string name="photo_open_exception">打开图片出错！</string>
    <string name="photo_delete_succeed">照片删除成功！</string>
    <string name="remove_record_failure">删除记录失败！</string>
    <string name="remove_record_succeed">删除记录成功！</string>
    <string name="get_data_null">当前没有保存的记录，请添加</string>
    <string name="gyyhd_ywxtid">业务系统ID</string>
    <string name="gyyhd_mc">名称</string>
    <string name="gyyhd_yhmc">用户名称</string>
    <string name="gyyhd_yddz">用电地址</string>
    <string name="gyyhd_sqbh">申请编号</string>
    <string name="gyyhd_vipbz">VIP标志</string>
    <string name="gyyhd_zydjx">重要等级性</string>
    <string name="gyyhd_xzq">行政区</string>
    <string name="gyyhd_whbz">维护班组</string>
    <string name="gyyhd_cnw">城农网</string>
    <string name="gyyhd_sjdw">上级单位</string>
    <string name="gyyhd_gldw">管理单位</string>
    <string name="gyyhd_longitude">经度（X坐标）</string>
    <string name="gyyhd_latitude">纬度（Y坐标）</string>
    <string name="gyyhd_altitude">高程</string>
    <string name="yhzx_ywxtid">业务系统ID</string>
    <string name="yhzx_xlmc">线路名称</string>
    <string name="yhzx_dydj">电压等级</string>
    <string name="yhzx_yxzt">运行状态</string>
    <string name="yhzx_zcdw">资产单位</string>
    <string name="yhzx_zcxz">资产性质</string>
    <string name="yhzx_sjdw">上级单位</string>
    <string name="yhzx_yxdw">运行单位</string>
    <string name="yhzx_whbz">维护班组</string>
    <string name="yhzx_sjxl">上级线路</string>
    <string name="yhzx_cnw">城农网</string>
    <string name="yhzx_sskx">所属馈线</string>
    <string name="yhzx_bdz">变（配）电站</string>
    <string name="yhzx_qdsb">起点设备</string>
    <string name="yhzx_zdsb">终点设备</string>
    <string name="yhzx_xlzcd">线路总长度（m）</string>
    <string name="yhzx_jkxlzcd">架空线路总长度（m）</string>
    <string name="yhzx_dlxlcd">电缆线路长度（m）</string>
    <string name="yhzx_xllx">线路类型</string>
    <string name="yhzx_ckcd">参考长度</string>
    <string name="yhjkgt_ywxtid">业务系统ID</string>
    <string name="yhjkgt_gtmc">杆塔名称</string>
    <string name="yhjkgt_gtcz">杆塔材质</string>
    <string name="yhjkgt_gtxz">杆塔性质</string>
    <string name="yhjkgt_sfgdytgjs">是否高低压同杆架设</string>
    <string name="yhjkgt_tgjshls">同杆架设回路数</string>
    <string name="yhjkgt_yxzt">运行状态</string>
    <string name="yhjkgt_zcdw">资产单位</string>
    <string name="yhjkgt_zcxz">资产性质</string>
    <string name="yhjkgt_gtxh">杆塔型号</string>
    <string name="yhjkgt_hcg">呼称高（m）</string>
    <string name="yhjkgt_gtg">杆塔高（m）</string>
    <string name="yhjkgt_cnw">城农网</string>
    <string name="yhjkgt_sjdw">上级单位</string>
    <string name="yhjkgt_yxdw">运行单位</string>
    <string name="yhjkgt_whbz">维护班组</string>
    <string name="yhjkgt_sskx">所属馈线</string>
    <string name="yhjkgt_ssxl">所属线路</string>
    <string name="yhjkgt_longitude">经度（X坐标）</string>
    <string name="yhjkgt_latitude">纬度（Y坐标）</string>
    <string name="yhjkgt_altitude">高程</string>
    <string name="yhjkgt_yxg_ywxtid">业务系统ID</string>
    <string name="yhjkgt_yxg_mc">名称</string>
    <string name="yhjkgt_yxg_gtsxh">杆塔顺序号</string>
    <string name="yhjkgt_yxg_sswlgtywidhwlgtmc">所属物理杆塔业务ID或物理杆塔名称</string>
    <string name="yhjkgt_yxg_sskx">所属馈线</string>
    <string name="yhjkgt_yxg_ssxl">所属线路</string>
    <string name="yhjkgt_yxg_yxzt">运行状态</string>
    <string name="yhjkgt_yxg_gtxz">杆塔性质（杆塔类型）</string>
    <string name="yhjkgt_yxg_dj">档距（m）</string>
    <string name="yhjkgt_yxg_xx">相序</string>
    <string name="yhjkgt_yxg_cnw">城农网</string>
    <string name="yhjkgt_yxg_dydj">电压等级</string>
    <string name="yhjkgt_yxg_sjdw">上级单位</string>
    <string name="yhjkgt_yxg_yxdw">运行单位</string>
    <string name="yhjkgt_yxg_whbz">维护班组</string>
    <string name="yhbyq_sskx">所属馈线</string>
    <string name="yhbyq_sstq">所属台区</string>
    <string name="yhbyq_syxz">使用性质</string>
    <string name="yhbyq_edrl">额定容量（kVA）</string>
    <string name="yhbyq_whbz">维护班组</string>
    <string name="yhbyq_zcxz">资产性质</string>
    <string name="yhbyq_azdz">安装地址</string>
    <string name="yhbyq_cjmc">厂家名称</string>
    <string name="yhbyq_yccdy">一次侧电压</string>
    <string name="yhbyq_eccdy">二次侧电压</string>
    <string name="yhbyq_sbxh">设备型号</string>
    <string name="yhbyq_mprl">铭牌容量</string>
    <string name="yhbyq_dlzk">短路阻抗</string>
    <string name="yhbyq_jxzb">接线组别</string>
    <string name="dzxx_province">省（直辖市、自治区）</string>
    <string name="dzxx_city">市（州）</string>
    <string name="dzxx_country">区（县）</string>
    <string name="dzxx_town">镇</string>
    <string name="dzxx_village">乡</string>
    <string name="dzxx_hamlet">村</string>
    <string name="yxbyqid">营销变压器ID</string>
    <string name="pyjd">偏移角度</string>
    <string name="pyjl">偏移距离</string>
    <string name="tjjrdbs">推荐接入点标识</string>
</resources>