<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/SimpleLabel.SimpleLabelRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dzxx_province"
        />
    <Spinner
        android:id="@+id/spProvince"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        />
    <TextView
        style="@style/SimpleLabel.SimpleLabelRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dzxx_city"
        />
    <Spinner
        android:id="@+id/spCity"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        />
    <TextView
        style="@style/SimpleLabel.SimpleLabelRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dzxx_country"
        />
    <Spinner
        android:id="@+id/spCountry"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        />
    <TextView
        style="@style/SimpleLabel.SimpleLabelRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dzxx_town"
        />
    <Spinner
        android:id="@+id/spTown"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        />
    <TextView
        style="@style/SimpleLabel.SimpleLabelRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dzxx_village"
        />
    <Spinner
        android:id="@+id/spVillage"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        />
    <TextView
        style="@style/SimpleLabel.SimpleLabelRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dzxx_hamlet"
        />
    <Spinner
        android:id="@+id/spHamlet"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/app_no"
            />
        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/app_yes"
            />
    </LinearLayout>
</LinearLayout>