<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearLayoutRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_sskx"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etSSKX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yhbyq_sskx"
        />

        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_sstq"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessSearch_
            android:id="@+id/searchSSTQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yhbyq_sstq"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_edrl"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etEDRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yhbyq_edrl"
        />

        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_syxz"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessSpinner
            android:id="@+id/spSYXZ"
            style="@style/SpinnerStyle"
            android:tag="@string/yhbyq_syxz"
        />

        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yxbyqid"
        />
        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etYXBYQID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yxbyqid"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhjkgt_zcdw"
        />
        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etZCDW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yhjkgt_zcdw"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_zcxz"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessSpinner
            android:id="@+id/spZCXZ"
            style="@style/SpinnerStyle"
            android:tag="@string/yhbyq_zcxz"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_whbz"
        />
        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etWHBZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yhbyq_whbz"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pyjd"
        />
        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etPYJD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/pyjd"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pyjl"
        />
        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etPYJL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/pyjl"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gyyhd_sqbh"
        />
        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etSQBH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/gyyhd_sqbh"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_azdz"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessAddress_
            android:id="@+id/viewAZDZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yhbyq_azdz"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_cjmc"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etCJMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yhbyq_cjmc"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_yccdy"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessSpinner
            android:id="@+id/spYCCDY"
            style="@style/SpinnerStyle"
            android:tag="@string/yhbyq_yccdy"
        />

        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_eccdy"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessSpinner
            android:id="@+id/spECCDY"
            style="@style/SpinnerStyle"

            android:tag="@string/yhbyq_eccdy"
        />
        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_sbxh"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etSBXH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yhbyq_sbxh"
        />

        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_mprl"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etMPRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yhbyq_mprl"
        />

        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_dlzk"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessEditText
            android:id="@+id/etDLZK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="@string/yhbyq_dlzk"
        />

        <TextView
            style="@style/SimpleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yhbyq_jxzb"
        />

        <com.geocraft.electrics.ui.view.UserDefineControlView.BusinessSpinner
            android:id="@+id/spJXZB"
            style="@style/SpinnerStyle"
            android:tag="@string/yhbyq_jxzb"
        />

    </LinearLayout>
</ScrollView>